# torch-image-segmentation-sandbox

./: pyproject.toml  readme.md
scripts/: tools.py
