[project]
name = "torch-image-segmentation-sandbox"
version = "0.1.0"
description = ""
authors = [
    {name = "kotwiceal",email = "kotvitskyaya@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.13"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "notebook (>=7.5.5,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "torch"}
torchvision = {source = "torch"}
torchaudio = {source = "torch"}

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
